--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.com.tijo</groupId>
 	<artifactId>jwt-tools</artifactId>
-	<version>1.0.2</version>
+	<version>1.0.3</version>
 	<name>jwt-tools</name>
 	<description>jwt-tools</description>
 
@@ -50,18 +50,13 @@
 		</dependency>
 	</dependencies>
 
-    <repositories>
-        <repository>
-            <id>myMavenRepo.read</id>
-            <url>https://mymavenrepo.com/repo/qEmUCyCub94caTB6OvAT/</url>
-        </repository>
-    </repositories>
-    <distributionManagement>
-        <repository>
-            <id>	</id>
-            <url>https://mymavenrepo.com/repo/ONkAUfDa9BDpvuaiHRh5/</url>
-        </repository>
-    </distributionManagement>
+	<distributionManagement>
+	   <repository>
+	     <id>github</id>
+	     <name>GitHub OWNER Apache Maven Packages</name>
+	     <url>https://maven.pkg.github.com/cleber-ortiz/api-login</url>
+	   </repository>
+	</distributionManagement>
 
 
     <build>
