--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,8 @@ jobs:
       
       - run: mkdir staging && cp target/*.jar staging
       
-      - uses: actions/upload-artifact@v3
-        with:
-          name: Package
-          path: staging
-
+      - name: Build with Maven.
+        run: mvn clean package -DattachMuleSources -Pgithub deploy
+        env:
+          GITHUB_USER_REF: ${{ secrets.GIT_USERNAME }}
+          GITHUB_TOKEN_REF: ${{ secrets.GIT_TOKEN }}
