--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
         <sonar.dependencyCheck.reportPath>${basedir}/dependency-check-report.xml</sonar.dependencyCheck.reportPath>
 	</properties>
 
+	<distributionManagement>
+	   <repository>
+	     <id>github</id>
+	     <name>GitHub OWNER Apache Maven Packages</name>
+	   </repository>
+	</distributionManagement>
 
 	<dependencies>
 		<dependency>
