--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 	   <repository>
 	     <id>github</id>
 	     <name>GitHub OWNER Apache Maven Packages</name>
+	     <url>https://maven.pkg.github.com/cleber-ortiz/jwt-tools</url>
 	   </repository>
 	</distributionManagement>
 
