--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,8 @@ jobs:
       
       - run: mkdir staging && cp target/*.jar staging
       
-      - name: Build with Maven.
-        run: mvn clean package -DattachMuleSources -Pgithub deploy
+      - name: Publish package
+        run: mvn --batch-mode deploy
         env:
-          GITHUB_USER_REF: ${{ secrets.GIT_USERNAME }}
-          GITHUB_TOKEN_REF: ${{ secrets.GIT_TOKEN }}
+          MAVEN_USERNAME: ${{ secrets.GIT_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.GIT_TOKEN }}
