--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,13 +25,16 @@ jobs:
         with:
           java-version: '8'
           distribution: 'adopt'
+          server-id: github
+          server-username: GITHUB_USER_REF  # env variable name for username
+          server-password: GITHUB_TOKEN_REF          
       
       - run: mvn --batch-mode --update-snapshots verify
       
       - run: mkdir staging && cp target/*.jar staging
       
-      - name: Publish package
-        run: mvn --batch-mode deploy
+      - name: Build with Maven.
+        run: mvn clean package -DattachMuleSources -Pgithub deploy
         env:
-          MAVEN_USERNAME: ${{ secrets.GIT_USERNAME }}
-          MAVEN_PASSWORD: ${{ secrets.GIT_TOKEN }}
+          GITHUB_USER_REF: ${{ secrets.GIT_USERNAME }}
+          GITHUB_TOKEN_REF: ${{ secrets.GIT_TOKEN }}
