--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,8 @@ jobs:
           java-version: '8'
           distribution: 'adopt'
           server-id: github
+          server-username: GIT_USER
+          server-password: GIT_TOKEN
       
       - name: Publish package
         run: mvn -Pgithub -s $GITHUB_WORKSPACE/.github/workflows/maven-settings.xml --batch-mode deploy 
