--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 	   <repository>
 	     <id>github</id>
 	     <name>GitHub OWNER Apache Maven Packages</name>
-	     <url>https://maven.pkg.github.com/cleber-ortiz/jwt-tools</url>
+	     <url>https://maven.pkg.github.com/cleber-ortiz/dependencies</url>
 	   </repository>
 	</distributionManagement>
 
@@ -56,6 +56,16 @@
 			<version>0.9.1</version>
 		</dependency>
 	</dependencies>
+
+  <repositories>
+    <repository>
+      <id>jwt-tools</id>
+      <name>jwt-tools</name>
+      <url>https://maven.pkg.github.com/cleber-ortiz/jwt-tools</url>
+    </repository>
+  </repositories>
+
+
 
     <build>
         <finalName>jwt-tools</finalName>
