--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,12 @@ jobs:
         with:
           java-version: '8'
           distribution: 'adopt'
+          server-id: github
+          server-username: GIT_USER
+          server-password: GIT_TOKEN
       
       - name: Publish package
-        run: mvn --batch-mode deploy 
+        run: mvn -Pgithub -s $GITHUB_WORKSPACE/.github/workflows/maven-settings.xml --batch-mode deploy 
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GIT_USER: ${{ secrets.GIT_USER }}
+          GIT_TOKEN: ${{ secrets.GIT_TOKEN }}
